--- a/stylemobil.css
+++ b/stylemobil.css
@@ -949,159 +949,9 @@ h2{
     margin-bottom: 1%;
 }
 
-/*.......................................media querys .......................................
+/*.......................................media querys .......................................*/
 
-@media screen and (min-width: 375px) and (max-width:600px) {
 
-#erza {
-        width: 7rem;
-        height: 5rem;
-}
-#ikki {
-    width: 7rem;
-    height: 5rem;
-}
-#auteur {
-    background-size: 6.5rem;
-    position: relative;
-    left: 0rem;
-    top: -3rem;
-    font-size: 12px;
-}
-#display_auteur {
-    max-height: 45vh;
-    max-width: 48vh;
-    position: absolute;
-    top: 0vh;
-    left: 1vh;
-    right: -12.1vh;
-}
-#shonen {
-    background-size: 4rem;
-    position: relative;
-    top: 13.5rem;
-    left: -4.5rem;
-}
-#display_shonen {
-    max-height: 45vh;
-    max-width: 48vh;
-    position: absolute;
-    top: 20%;
-    z-index: 10;
-    position: absolute;
-    top: 0vh;
-    left: 1vh;
-    right: -12.1vh;
-}
-#seinen {
-    background-size: 7rem;
-    position: relative;
-    top: 17.3rem;
-    left: -13rem;
-}
-#display_seinen {
-    max-height: 46vh;
-    max-width: 48vh;
-    position: absolute;
-    top: 0vh;
-    left: 1vh;
-    right: -12.1vh;
-}
-#shojo {
-    background-size: 7rem;
-    position: absolute;
-    top: 19.5rem;
-    left: 3.5rem;
-}
-#artbooks {
-    background-size: 4rem;
-    position: absolute;
-    top: 23.5rem;
-    left: 12.5rem;
-}
-#videos {
-    background-size: 4rem;
-    position: absolute;
-    top: 21.5rem;
-    left: 16.5rem;
-}
-#liseuse {
-    background-size: 4rem;
-    position: absolute;
-    top: 19.5rem;
-    left: 15.5rem;
-}
-#jiraya {
-    background: url("./images/personnages/jiraya_sur_crapaud.png");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 5rem;
-    opacity: 1;
-    position: relative;
-    top: -9rem;
-    left: 0rem;
-}
-#goku {
-    background: url("./images/personnages/goku_petit01.png");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 5rem;
-    opacity: 1;
-    position: relative;
-    top: -9rem;
-    left: 0rem;
-}
-
-#natsu {
-    background: url("./images/personnages/natsu01.png");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 7rem;
-    opacity: 1;
-    position: relative;
-    top: -9rem;
-    left: -1rem;
-}
-#ken {
-    background: url("./images/personnages/ken.png");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 3rem;
-    opacity: 1;
-    position: relative;
-    top: -16rem;
-    left: 17.5rem;
-}
-.nuages {
-    height: 3rem;
-}
-#display_videos {
-    max-height: 77vh;
-    max-width: 56vh;
-    position: absolute;
-    top: 14vh;
-    left: 0vh;
-    right: 0vh;
-}
-.container_videos {
-    height: 72vh;
-}
-.container_artbooks {
-    height: 76vh;
-}
-#display_artbooks {
-    max-height: 81vh;
-    max-width: 56vh;
-}
-#display_liseuse {
-    max-height: 89vh;
-    max-width: 56vh;
-    position: absolute;
-    top: 8vh;
-    left: 0vh;
-    right: 0vh;
-}
-}*/
 .card {
     width: 95%;
     border-radius: 12px;
@@ -1878,6 +1728,22 @@ h2{
         top: 8%;
         font-size: 10px;
     }
+    #auteur {
+        animation-duration: 1s;
+        animation-name: filterauteur;
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
+      }
+      
+      @keyframes filterauteur {
+        from {
+            filter: drop-shadow(2px 3px 1px white);
+        }
+      
+        to {
+            filter: drop-shadow(2px 3px 10px white)
+        }
+    }
     #display_auteur {
         font-size: 10px;
         text-align: justify;
@@ -1898,6 +1764,22 @@ h2{
         position: absolute;
         top: 17%;
         left: 23%;
+    }
+    #shonen {
+        animation-duration: 1s;
+        animation-name: filtershonen;
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
+      }
+      
+      @keyframes filtershonen {
+        from {
+            filter: drop-shadow(2px 3px 1px white);
+        }
+      
+        to {
+            filter: drop-shadow(2px 3px 10px white)
+        }
     }
     #display_shonen {
         max-height: 50vh;
@@ -1920,6 +1802,22 @@ h2{
         top: 36%;
         left: 15%;
     }
+    #seinen {
+        animation-duration: 1s;
+        animation-name: filterseinen;
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
+      }
+      
+      @keyframes filterseinen {
+        from {
+            filter: drop-shadow(2px 3px 1px white);
+        }
+      
+        to {
+            filter: drop-shadow(2px 3px 10px white)
+        }
+    }
     #display_seinen {
         font-size: 10px;
         max-height: 50vh;
@@ -1938,6 +1836,22 @@ h2{
         position: absolute;
         top: 52%;
         left: 27%;
+    }
+    #shojo {
+        animation-duration: 1s;
+        animation-name: filtershojo;
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
+      }
+      
+      @keyframes filtershojo {
+        from {
+            filter: drop-shadow(2px 3px 1px white);
+        }
+      
+        to {
+            filter: drop-shadow(2px 3px 10px white)
+        }
     }
     #display_shojo {
         background-color: antiquewhite;
@@ -1966,6 +1880,22 @@ h2{
         top: 17%;
         left: 66%;
     }
+    #liseuse {
+        animation-duration: 1s;
+        animation-name: filterliseuse;
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
+      }
+      
+      @keyframes filterliseuse {
+        from {
+            filter: drop-shadow(2px 3px 1px white);
+        }
+      
+        to {
+            filter: drop-shadow(2px 3px 10px white)
+        }
+      }
     #display_liseuse {
         max-height: 95vh;
         max-width: 65vh;
@@ -1987,6 +1917,22 @@ h2{
         top: 36%;
         left: 73%;
     }
+    #videos {
+        animation-duration: 1s;
+        animation-name: filtervideos;
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
+      }
+      
+      @keyframes filtervideos {
+        from {
+            filter: drop-shadow(2px 3px 1px white);
+        }
+      
+        to {
+            filter: drop-shadow(2px 3px 10px white)
+        }
+      }
     #display_videos {
         max-height: 93vh;
         max-width: 118vh;
@@ -1996,7 +1942,7 @@ h2{
         right: 0vh;
     }
     .container_videos {
-        background-image: url(./images/gallerie/groupe2.jpg);
+        background-image: url("./images/gallerie/groupe2.jpg");
         display: flex;
         flex-direction: column;
         height: 83vh;
@@ -2021,6 +1967,22 @@ h2{
         top: 51%;
         left: 62%;
     }
+    #artbooks {
+        animation-duration: 1s;
+        animation-name: filterartbooks;
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
+      }
+      
+      @keyframes filterartbooks {
+        from {
+            filter: drop-shadow(2px 3px 1px white);
+        }
+      
+        to {
+            filter: drop-shadow(2px 3px 10px white)
+        }
+      }
     #display_artbooks {
         background-color: antiquewhite;
         max-height: 80vh;
@@ -2061,6 +2023,24 @@ h2{
         top: 72%;
         left: 8.5%;
     }
+    #jiraya {
+        animation-duration: 1s;
+        animation-name: saute;
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
+      }
+      
+      @keyframes saute {
+        from {
+          top: 72%;
+          left:8.5%;
+        }
+      
+        to {
+          top: 70%;
+          left:8.5%;
+        }
+      } 
     .button_jiraya {
         width: 5rem;
         height: 5rem;
@@ -2138,6 +2118,46 @@ h2{
         top: 67%;
         left: 30%;
     }
+    #goku {
+        animation-duration: 1s;
+        animation-name: sautegoku;
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
+      }
+      
+      @keyframes sautegoku {
+        from {
+          top: 67%;
+          left:30%;
+        }
+      
+        to {
+          top: 66%;
+          left:30%;
+        }
+      }
+    #gokunuage{
+        position:absolute;
+        height:8%;
+        width:8%;
+        top:7%;
+        left:0%;
+    }
+    #gokunuage {
+        animation-duration: 3s;
+        animation-name: gokunuage;
+        animation-iteration-count: infinite;
+      }
+      
+      @keyframes gokunuage {
+        from {
+            left:0%;
+        }
+      
+        to {
+            left:100%
+        }
+      } 
     .button_goku {
         width: 7rem;
         height: 8rem;
@@ -2255,6 +2275,24 @@ h2{
         top: 69%;
         left: 60%;
     }
+    #natsu {
+        animation-duration: 1s;
+        animation-name: sautenatsu;
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
+      }
+      
+      @keyframes sautenatsu {
+        from {
+          top: 69%;
+          left:60%;
+        }
+      
+        to {
+          top: 68%;
+          left:60%;
+        }
+      } 
     .button_natsu {
         width: 4rem;
         height: 6rem;
@@ -2372,6 +2410,24 @@ h2{
         top: 68%;
         left: 80%;
     }
+    #ken {
+        animation-duration: 1s;
+        animation-name: sauteken;
+        animation-iteration-count: infinite;
+        animation-direction: alternate;
+      }
+      
+      @keyframes sauteken {
+        from {
+          top: 68%;
+          left:80%;
+        }
+      
+        to {
+          top: 67%;
+          left:80%;
+        }
+      } 
     .button_ken {
         width: 5rem;
         height: 6rem;
@@ -4841,4 +4897,4 @@ h2{
 } 
 
 
-    
+  
